--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   device_preview: ^0.7.3
   fluttertoast: ^8.0.7
   flutter_bloc: ^7.0.1
   progress_dialog: ^1.2.4
-  dio: ^4.0.0
-  connectivity: ^3.0.6
-  flutter_platform_widgets: ^1.9.5
   http: ^0.13.3
   shared_preferences: ^2.0.6
   json_annotation: ^4.0.1
   url_launcher: ^6.0.7
   http_interceptor: ^1.0.0
   flutter_search_bar: ^2.1.0
+  country_code_picker: ^2.0.2
+  phone_number: ^0.11.0+1
 
 dev_dependencies:
   flutter_test:
